# zhiati

./: .gitignore  Cargo.toml  README.md  create-ico.py  create-icon.ps1  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: api.rs  commands.rs  main.rs
docs/: FUTURE_FEATURES.md  SPEC.md
server/: .env.example  Cargo.toml
server/src/: error.rs  main.rs
server/src/routes/: attachments.rs  auth.rs  mod.rs  notes.rs  reminders.rs
server/src/services/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
skills/zt-cli/: SKILL.md
win-desktop/: Cargo.toml  tauri.conf.json
win-desktop/capabilities/: default.json
win-desktop/renderer/: index.html  package-lock.json  package.json  test.html  vite.config.js
win-desktop/renderer/css/: style.css
win-desktop/renderer/js/: app.js  mini.js
win-desktop/src/: auth.rs  commands.rs  config.rs  crypto.rs  db.rs  lib.rs  main.rs  notification.rs  scheduler.rs  tray.rs
