[package]
name = "zhiati-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
